--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230111230249">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230115005626">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,9 +77,9 @@
 							<li class="tag-list__tag-list-item">UX/UI дизайн</li>
 							<li class="tag-list__tag-list-item">Разработка</li>
 						</ul>
-						<div class="portfolio-section__container-flex-columns container-flex-columns">
-							<div class="container-flex-columns__left-column">
-								<div class="container-flex-columns__card card">
+						<div class="portfolio-section__flex-container-columns flex-container-columns">
+							<div class="flex-container-columns__left-column">
+								<div class="flex-container-columns__card card">
 									<div class="card__image"><picture><source srcset="img/body/portfolio/bust.webp" type="image/webp"><img src="img/body/portfolio/bust.png" alt=""></picture></div>
 									<div class="card__subtittle">Корпоративный сайт юридической фирмы IPLS</div>
 									<div class="card__tags">
@@ -87,7 +87,7 @@
 										<div class="card__tag">Веб дизайн</div>
 									</div>
 								</div>
-								<div class="container-flex-columns__card card">
+								<div class="flex-container-columns__card card">
 									<div class="card__image"><picture><source srcset="img/body/portfolio/johnny.webp" type="image/webp"><img src="img/body/portfolio/johnny.png" alt=""></picture></div>
 									<div class="card__subtittle">Трафик по 40 направлениям для онлайн-курсов</div>
 									<div class="card__tags">
@@ -95,7 +95,7 @@
 										<div class="card__tag">Таргет</div>
 									</div>
 								</div>
-								<div class="container-flex-columns__card card">
+								<div class="flex-container-columns__card card">
 									<div class="card__image"><picture><source srcset="img/body/portfolio/tnt.webp" type="image/webp"><img src="img/body/portfolio/tnt.png" alt=""></picture></div>
 									<div class="card__subtittle">ТНТ перезагрузка</div>
 									<div class="card__tags">
@@ -104,8 +104,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="container-flex-columns__right-column">
-								<div class="container-flex-columns__card card">
+							<div class="flex-container-columns__right-column">
+								<div class="flex-container-columns__card card">
 									<div class="card__image"><picture><source srcset="img/body/portfolio/girl-boy.webp" type="image/webp"><img src="img/body/portfolio/girl-boy.png" alt=""></picture></div>
 									<div class="card__subtittle">Интерент магазин letricot</div>
 									<div class="card__tags">
@@ -113,7 +113,7 @@
 										<div class="card__tag">Веб дизайн</div>
 									</div>
 								</div>
-								<div class="container-flex-columns__card card">
+								<div class="flex-container-columns__card card">
 									<div class="card__image"><picture><source srcset="img/body/portfolio/sinergy.webp" type="image/webp"><img src="img/body/portfolio/sinergy.png" alt=""></picture></div>
 									<div class="card__subtittle">Корпоративный сайт юридической фирмы IPLS</div>
 									<div class="card__tags">
@@ -121,7 +121,7 @@
 										<div class="card__tag">Google ads</div>
 									</div>
 								</div>
-								<div class="container-flex-columns__card card">
+								<div class="flex-container-columns__card card">
 									<div class="card__image"><picture><source srcset="img/body/portfolio/girl.webp" type="image/webp"><img src="img/body/portfolio/girl.png" alt=""></picture></div>
 									<div class="card__subtittle">Media production для Елены Темниковой</div>
 									<div class="card__tags">
@@ -132,6 +132,7 @@
 							</div>
 						</div>
 					</div>
+
 				</div>
 			</div>
 		</main>
@@ -189,7 +190,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230111230249"></script>
+	<script src="js/app.min.js?_v=20230115005626"></script>
 </body>
 
 </html>
