--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230111230249">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230115005626">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -66,90 +66,101 @@
 			</div>
 		</header>
 		<main class="page">
-			<div class="page__section section">
-				<div class="section__services services-section">
-					<div class="services-section__container_services">
-						<div class="services-section__page-tittle page-tittle">услуги</div>
-
-						<ul class="services-section__flex-list flex-list-services">
+			<section class="section-services">
+				<div class="section-services__container">
+					<div class="section-services__page-tittle page-tittle">услуги</div>
+					<div class="section-services__content">
+						<ul class="section-services__flex-list flex-list-services">
 							<li class="flex-list-services__flex-item-services">
-								<a class="flex-list-services__href" href="">
+								<div class="flex-list-services__href" href="">
+									<a href=""><span></span></a>
 									<div class="flex-list-services__subtittle-services">Брендинг</div>
 									<div class="flex-list-services__info-services">
 										<div class="flex-list-services__text-services">Создаем исключительный, незабываемый фирменный стиль, который формирует идентичность и стимулирует продажи</div>
 										<button type="submit" class="flex-list-services__button-services _icon-btn-arr"></button>
 									</div>
-								</a>
+								</div>
 							</li>
 							<li class="flex-list-services__flex-item-services">
-								<a href="" class="flex-list-services__href">
+								<a href=""><span></span></a>
+								<div href="" class="flex-list-services__href">
 									<div class="flex-list-services__subtittle-services">UX/UI-дизайн</div>
 									<div class="flex-list-services__info-services">
 										<div class="flex-list-services__text-services">Разрабытываем дизайн на основе аналитики, метрик и пользовательского опыта, который решает задачи наших клиентов</div>
 										<button type="submit" class="flex-list-services__button-services _icon-btn-arr"></button>
 									</div>
-								</a>
+								</div>
 							</li>
 							<li class="flex-list-services__flex-item-services">
-								<a href="" class="flex-list-services__href">
+								<a href=""><span></span></a>
+								<div href="" class="flex-list-services__href">
 									<div class="flex-list-services__subtittle-services">Разработка и поддержка</div>
 									<div class="flex-list-services__info-services">
 										<div class="flex-list-services__text-services">Разрабатываем высоконагруженные сайты и сервисы, построенные на современных технологиях и фреймворках</div>
 										<button type="submit" class="flex-list-services__button-services _icon-btn-arr"></button>
 									</div>
-								</a>
+								</div>
 							</li>
 							<li class="flex-list-services__flex-item-services">
-								<a href="" class="flex-list-services__href">
+								<a href=""><span></span></a>
+								<div href="" class="flex-list-services__href">
 									<div class="flex-list-services__subtittle-services">Маркетинг</div>
 									<div class="flex-list-services__info-services">
 										<div class="flex-list-services__text-services">Создаем исключительный, незабываемый фирменный стиль, который формирует идентичность и стимулирует продажи</div>
 										<button type="submit" class="flex-list-services__button-services _icon-btn-arr"></button>
 									</div>
-								</a>
+								</div>
 							</li>
 							<li class="flex-list-services__flex-item-services">
-								<a href="" class="flex-list-services__href">
+								<a href=""><span></span></a>
+								<div href="" class="flex-list-services__href">
 									<div class="flex-list-services__subtittle-services">SEO / SERM / контент-маркетинг</div>
 									<div class="flex-list-services__info-services">
 										<div class="flex-list-services__text-services">Создаем исключительный, незабываемый фирменный стиль, который формирует идентичность и стимулирует продажи</div>
 										<button type="submit" class="flex-list-services__button-services _icon-btn-arr"></button>
 									</div>
-								</a>
-							</li>
-						</ul>
-					</div>
-					<div class="services-section__container-flex-columns container-flex-columns">
-						<div class="container-flex-columns__left-column left-column">
-							<div class="container-flex-columns__subtittle-services-team">Схема работы</div>
-						</div>
-						<div class="container-flex-columns__right-column right-column">
-							<div class="container-flex-columns__text-services-team">Мы формируем выделенную команду, которая занимается созданием и развитием вашего продукта. Работа ведется по спринтам, которые гарантируют полную прозрачность и позволяют управлять приоритетами.</div>
-						</div>
-					</div>
-
-					<div class="services-section__container_services-bottom">
-						<ul class="services-section__list-services">
-							<li class="services-section__item-list-services">
-								<div class="services-section__item-list-subtittle">Fix Price</div>
-								<div class="services-section__item-list-text">Для задач с предсказуемымисроком и бюджетом.
-								</div>
-							</li>
-							<li class="services-section__item-list-services">
-								<div class="services-section__item-list-subtittle">T&M</div>
-								<div class="services-section__item-list-text">Для длинных и сложных проектов с гибким планированием.
-								</div>
-							</li>
-							<li class="services-section__item-list-services">
-								<div class="services-section__item-list-subtittle">Retention</div>
-								<div class="services-section__item-list-text">Выделенная команда на определенный срок по зафиксированной цене.
 								</div>
 							</li>
 						</ul>
-					</div>
 
+					</div>
 				</div>
-			</div>
+			</section>
+			<section class="section-services-footer">
+				<div class="section-services-footer__container">
+					<div class="section-services-footer__content">
+						<div class="section-services-footer__flex-container-columns flex-container-columns">
+							<div class="flex-container-columns__left-column">
+								<div class="flex-container-columns__subtittle-services-team">Схема работы</div>
+							</div>
+							<div class="flex-container-columns__right-column">
+								<div class="section-services-footer__footer-content-text">
+									Мы формируем выделенную команду, которая занимается созданием и развитием вашего продукта. Работа ведется по спринтам, которые гарантируют полную прозрачность и позволяют управлять приоритетами.
+								</div>
+							</div>
+						</div>
+						<div class="section-services-footer__propeties-list">
+							<ul class="services-section__list-services">
+								<li class="services-section__item-list-services">
+									<div class="services-section__item-list-subtittle">Fix Price</div>
+									<div class="services-section__item-list-text">Для задач с предсказуемымисроком и бюджетом.
+									</div>
+								</li>
+								<li class="services-section__item-list-services">
+									<div class="services-section__item-list-subtittle">T&M</div>
+									<div class="services-section__item-list-text">Для длинных и сложных проектов с гибким планированием.
+									</div>
+								</li>
+								<li class="services-section__item-list-services">
+									<div class="services-section__item-list-subtittle">Retention</div>
+									<div class="services-section__item-list-text">Выделенная команда на определенный срок по зафиксированной цене.
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -205,7 +216,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230111230249"></script>
+	<script src="js/app.min.js?_v=20230115005626"></script>
 </body>
 
 </html>
