--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230115005626">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230115155832">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,9 +52,9 @@
 									<div class="menu_home-page__phone"><a href="tel:79999009080">+ 7 999 900 9080</a></div>
 									<nav class="menu_home-page__body">
 										<ul class="menu_home-page__list">
-											<li class="menu_home-page__item"><a href="http://192.168.10.37:8080/portfolio.html" class="menu_home-page__link">проекты</a></li>
-											<li class="menu_home-page__item"><a href="http://192.168.10.37:8080/agency.html" class="menu_home-page__link">агенство</a></li>
-											<li class="menu_home-page__item"><a href="http://192.168.10.37:8080/services.html" class="menu_home-page__link">услуги</a></li>
+											<li class="menu_home-page__item"><a href="portfolio.html" class="menu_home-page__link">проекты</a></li>
+											<li class="menu_home-page__item"><a href="agency.html" class="menu_home-page__link">агенство</a></li>
+											<li class="menu_home-page__item"><a href="services.html" class="menu_home-page__link">услуги</a></li>
 										</ul>
 										<div class="menu_home-page__hidden hidden-menu">
 											<div class="hidden-menu__columns">
@@ -73,11 +73,11 @@
 												<div class="hidden-menu__menu-column">
 													<div class="hidden-menu__menu-tittle">Menu</div>
 													<ul class="hidden-menu__menu-list">
-														<li class="hidden-menu__menu-item"><a href="http://192.168.10.37:8080/home.html"></a>Work</li>
-														<li class="hidden-menu__menu-item"><a href="http://192.168.10.37:8080/portfolio.html"></a>About</li>
-														<li class="hidden-menu__menu-item"><a href="http://192.168.10.37:8080/design.html"></a>Services</li>
-														<li class="hidden-menu__menu-item"><a href="http://192.168.10.37:8080/agency.html"></a>Tutorials</li>
-														<li class="hidden-menu__menu-item"><a href="http://192.168.10.37:8080/services.html"></a>Contacts</li>
+														<li class="hidden-menu__menu-item"><a href="home.html">Work</a></li>
+														<li class="hidden-menu__menu-item"><a href="portfolio.html">About</a></li>
+														<li class="hidden-menu__menu-item"><a href="design.html">Services</a></li>
+														<li class="hidden-menu__menu-item"><a href="agency.html">Tutorials</a></li>
+														<li class="hidden-menu__menu-item"><a href="services.html">Contacts</a></li>
 													</ul>
 												</div>
 											</div>
@@ -108,7 +108,7 @@
 						<div class="main-page-header__header-footer header-footer">
 							<ul class="header-footer__content-list">
 								<li class="header-footer__list-item">
-									<a href="http://192.168.10.37:8080/services.html" class="header-footer__learn-more">узнать больше</a>
+									<a href="services.html" class="header-footer__learn-more">узнать больше</a>
 								</li>
 								<li class="header-footer__list-item_year">© 2022</li>
 								<li class="header-footer__list-item">
@@ -214,7 +214,7 @@
 									</div>
 									<div class="about-agency-section__cooperation-subtittle">Сотрудничество с Digitally - это опыт, которым вам захочется поделиться со всеми...</div>
 								</div>
-								<div class="href-wrapper"><a href="http://192.168.10.37:8080/agency.html" class="about-agency-section__about-ref _icon-enter">об агенстве</a></div>
+								<div class="href-wrapper"><a href="agency.html" class="about-agency-section__about-ref _icon-enter">об агенстве</a></div>
 								<ul class="agency-section__statistic statictic-list_portfolio">
 									<li class="statictic-list_portfolio__item_portfolio">
 										<div class="statictic-list_portfolio__number_portfolio-y">12</div>
@@ -308,7 +308,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230115005626"></script>
+	<script src="js/app.min.js?_v=20230115155832"></script>
 </body>
 
 </html>
